ajustes filtros Mis productos y Almacén

--- a/src/app/home/pages/home/my-products/publish-myproducts/publish-myproducts.component.html
+++ b/src/app/home/pages/home/my-products/publish-myproducts/publish-myproducts.component.html
@@ -14,13 +14,13 @@
       <div class="col-md-3">
         <div class="form-group">
           <input type="text" class="form-control" name="nameSeach" [(ngModel)]="nameSeach" id="idNameProduct"
-            placeholder="Buscar por nombre...">
+            placeholder="Nombre...">
         </div>
       </div>
       <div class="col-md-3">
         <div class="form-group">
           <input type="text" class="form-control" name="skuSearch" [(ngModel)]="skuSearch" id="idSku"
-            placeholder="Buscar por SKU...">
+            placeholder="SKU...">
         </div>
       </div>
 
