--- a/src/app/home/pages/home/my-products/publish-myproducts/publish-myproducts.component.html
+++ b/src/app/home/pages/home/my-products/publish-myproducts/publish-myproducts.component.html
@@ -10,7 +10,7 @@
   <form action="" #f="ngForm">
     <!-- <div class="card-body container"> -->
 
-    <div class="row mt-3 pt-0 justify-content-center">
+    <div class="row mt-3 px-5 pt-0 justify-content-center">
       <div class="col-md-3">
         <div class="form-group">
           <input type="text" class="form-control" name="nameSeach" [(ngModel)]="nameSeach" id="idNameProduct"
@@ -44,7 +44,7 @@
         </div>
       </div>
     </div>
-    <div class="row  pt-0 ">
+    <div class="row px-5 pt-0 ">
       <div class="col-md-3">
         <div class="input-group mb-3">
           <div class="input-group-prepend">
@@ -75,6 +75,9 @@
           </select>
         </div>
       </div> -->
+      <div class="col-md-3">
+
+      </div>
       <div class="col-md-3">
         <div class="d-flex justify-content-center align-items-center">
           <button class="btn btn-primary h-75 w-75 mx-2 " (click)="searchProducts()">
