--- a/src/app/home/pages/home/store/products-store/products-store.component.html
+++ b/src/app/home/pages/home/store/products-store/products-store.component.html
@@ -13,124 +13,146 @@
     </div>
   </div>
   <!--<div class="" id="collapseCardFilterProductStorage"> -->
-    <form #f="ngForm">
-      <!--<div class="card-body container">-->
+  <form #f="ngForm">
+    <!--<div class="card-body container">-->
 
-        <div class="row mt-3 ml-5 pt-0 justify-content-center">
-          <div class="col-md-2">
-            <div class="form-group">
-              <input type="text" class="form-control" name="nameSeach" [(ngModel)]="nameSeach" id="idNameProduct"
-                placeholder="Nombre...">
-            </div>
+    <div class="row mt-3 ml-2 px-3 pt-0 justify-content-center">
+      <div class="col-md-3">
+        <div class="form-group">
+          <input type="text" class="form-control" name="nameSeach" [(ngModel)]="nameSeach" id="idNameProduct"
+            placeholder="Nombre...">
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="form-group">
+          <input type="text" class="form-control" name="skuSearch" [(ngModel)]="skuSearch" id="idSku"
+            placeholder="SKU...">
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <label class="input-group-text" for="inputFamily">Categoría</label>
           </div>
-          <div class="col-md-2">
-            <div class="form-group">
-              <input type="text" class="form-control" name="skuSearch" [(ngModel)]="skuSearch" id="idSku"
-                placeholder="SKU...">
-            </div>
+          <select name="typeFamilySearch" [(ngModel)]="typeFamilySearch" id="inputFamily" class="custom-select">
+            <option [value]="typeFamilySearchClear">Todas</option>
+            <option *ngFor="let family of productStoreService.families" [value]="family.id">
+              {{family.description}} </option>
+          </select>
+        </div>
+      </div>
+      <!--<div class="row"> -->
+      <div class="col-md-2">
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <label class="input-group-text" for="inputCategory">Campaña</label>
           </div>
-          <div class="col-md-3">
-            <div class="input-group mb-3">
-              <div class="input-group-prepend">
-                <label class="input-group-text" for="inputFamily">Categoría</label>
-              </div>
-              <select name="typeFamilySearch" [(ngModel)]="typeFamilySearch" id="inputFamily" class="custom-select">
-                <option [value]="typeFamilySearchClear">Todas</option>
-                <option *ngFor="let family of productStoreService.families" [value]="family.id">
-                  {{family.description}} </option>
-              </select>
-            </div>
+          <select name="typeCategorySearch" [(ngModel)]="typeCategorySearch" id="inputCategory" class="custom-select">
+            <option [value]="typeCategorySearchClear">Todas</option>
+            <option *ngFor="let category of productStoreService.categories" [value]="category.id">
+              {{category.description}} </option>
+          </select>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <button class="btn btn-outline-secondary ml-1" (click)="clearSearch(f)"> <i *ngIf="loadingClear"
+            class="fas fa-spin fa-spinner m-1"></i><i *ngIf="!loadingClear" class="fas fa-broom m-1"></i>
+          Limpiar</button>
+      </div>
+      <!-- </div> -->
+    </div>
+    <div class="row px-3 ml-2 pt-0 justify-content-center">
+      <div class="col-md-3">
+        <div class="input-group mb-3 ">
+          <div class="input-group-prepend">
+            <label class="input-group-text" for="idMinPriceSearch">Precio mínimo</label>
           </div>
-          <!--<div class="row"> -->
-          <div class="col-md-3">
-            <div class="input-group mb-3">
-              <div class="input-group-prepend">
-                <label class="input-group-text" for="inputCategory">Campaña</label>
-              </div>
-              <select name="typeCategorySearch" [(ngModel)]="typeCategorySearch" id="inputCategory"
-                class="custom-select">
-                <option [value]="typeCategorySearchClear">Todas</option>
-                <option *ngFor="let category of productStoreService.categories" [value]="category.id">
-                  {{category.description}} </option>
-              </select>
-            </div>
+          <!-- TO DO: Modificar controlador del input para que sea text -->
+          <input class="form-control text-box single-line " type="number" step="5" min="0" max="100000"
+            [(ngModel)]="minValue" name="idMinPriceSearch" id="idMinPriceSearch">
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="input-group mb-3 ">
+          <div class="input-group-prepend">
+            <label class="input-group-text" for="idMaxPriceSearch">Precio máximo</label>
           </div>
-          <div class="col-md-2">
-            <button class="btn btn-outline-secondary ml-1" (click)="clearSearch(f)"> <i *ngIf="loadingClear"
-                class="fas fa-spin fa-spinner m-1"></i><i *ngIf="!loadingClear" class="fas fa-broom m-1"></i>
-              Limpiar</button>
-          </div>
-          <!-- </div> -->
-
-          <div class="row ">
-            <div class="col-md-4">
-              <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                  <label class="input-group-text" for="idMinPriceSearch">Precio mínimo</label>
-                </div>
-                <input class="form-control text-box single-line" type="number" step="5" min="0" max="100000"
-                  [(ngModel)]="minValue" name="idMinPriceSearch" id="idMinPriceSearch">
+          <input class="form-control text-box single-line " type="number" step="5" min="0" max="100000"
+            [(ngModel)]="maxValue" name="idMaxPriceSearch" id="idMaxPriceSearch">
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="dropdown text-start" id="meliUbicationId">
+          <button class="btn dropdown-toggle btn-outline-primary w-100 text-start" type="button" data-toggle="dropdown" aria-expanded="false">
+            Ubicación
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="#">
+              <div class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" id="customCheck1" name="notExistInMeli"
+                  [(ngModel)]="notExistInMeli">
+                <label class="custom-control-label" for="customCheck1"> Sin ubicación</label>
               </div>
-            </div>
-            <div class="col-md-4">
-              <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                  <label class="input-group-text" for="idMaxPriceSearch">Precio máximo</label>
-                </div>
-                  <input class="form-control text-box single-line" type="number" step="5" min="0" max="100000"
-                    [(ngModel)]="maxValue" name="idMaxPriceSearch" id="idMaxPriceSearch">
+            </a>
+            <a class="dropdown-item" href="#">
+              <div class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" id="customCheck2" name="existInMeli"
+                  [(ngModel)]="existInMeli">
+                <label class="custom-control-label" for="customCheck2"> En marketplace</label>
               </div>
-            </div>
-            <div class="col-md-2">
-              <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                  <label class="input-group-text" for="meliUbicationId">Ubicación</label>
-                  <div class="dropdown" id="meliUbicationId">
-                    <button class="btn dropdown-toggle btn-outline-primary" type="button" id="dropdownMenuButton"
-                      data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Mercado Libre
-                    </button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                      <a class="dropdown-item" href="#">
-                        <div class="custom-control custom-checkbox">
-                          <input type="checkbox" class="custom-control-input" id="customCheck1" name="notExistInMeli"
-                            [(ngModel)]="notExistInMeli">
-                          <label class="custom-control-label" for="customCheck1"> Sin ubicación</label>
-                        </div>
-                      </a>
-                      <a class="dropdown-item" href="#">
-                        <div class="custom-control custom-checkbox">
-                          <input type="checkbox" class="custom-control-input" id="customCheck2" name="existInMeli"
-                            [(ngModel)]="existInMeli">
-                          <label class="custom-control-label" for="customCheck2"> En marketplace</label>
-                        </div>
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- TO DO: filtro stock -->
-          <!--<div class="col-md-2">
-            <div class="input-group mb-3">
-              <div class="input-group-prepend">
-                <label class="input-group-text" for="inputFamily">Stock</label>
-              </div>
-              <select name="meliAccountSearch" id="inputFamily" class="custom-select">
-                <option [value]="">En stock</option>
-                <option [value]="">Sin stock</option>
-              </select>
-            </div>
-          </div> -->
-          <div class="col-md-2">
-            <button class="btn btn-primary mr-1" (click)="searchProducts()">
-              <i *ngIf="!loadPaginator" class="fas fa-search m-1"></i> <i *ngIf="loadPaginator"
-                class="fas fa-spin fa-spinner m-1"></i> Buscar</button>
+            </a>
           </div>
         </div>
-      <!--</div>-->
-    </form>
+        <!--<div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <label class="input-group-text" for="meliUbicationId">Ubicación</label>
+            <div class="dropdown" id="meliUbicationId">
+              <button class="btn dropdown-toggle btn-outline-primary" type="button" id="dropdownMenuButton"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Mercado Libre
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="customCheck1" name="notExistInMeli"
+                      [(ngModel)]="notExistInMeli">
+                    <label class="custom-control-label" for="customCheck1"> Sin ubicación</label>
+                  </div>
+                </a>
+                <a class="dropdown-item" href="#">
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="customCheck2" name="existInMeli"
+                      [(ngModel)]="existInMeli">
+                    <label class="custom-control-label" for="customCheck2"> En marketplace</label>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>-->
+      </div>
+      <!-- TO DO: filtro stock -->
+      <div class="col-md-2">
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <label class="input-group-text" for="inputFamily">Stock</label>
+          </div>
+          <select name="meliAccountSearch" id="inputFamily" class="custom-select" disabled>
+            <option [value]="">En stock</option>
+            <option [value]="">Sin stock</option>
+          </select>
+        </div>
+      </div>
+      <!--<div class="col-md-2 border boder-primary ">
+      </div>-->
+      <div class="col-md-2">
+        <button class="btn btn-primary mr-1" (click)="searchProducts()">
+          <i *ngIf="!loadPaginator" class="fas fa-search m-1"></i> <i *ngIf="loadPaginator"
+            class="fas fa-spin fa-spinner m-1"></i> Buscar</button>
+      </div>
+    </div>
+    <!--</div>-->
+  </form>
   <!--</div>-->
 </div>
 
