cambios en la tabla Mis productos

--- a/src/app/home/pages/home/my-products/publish-myproducts/publish-myproducts.component.html
+++ b/src/app/home/pages/home/my-products/publish-myproducts/publish-myproducts.component.html
@@ -136,7 +136,7 @@
             <th>Imagen</th>
             <th>Nombre</th>
             <th>SKU</th>
-            <th>Familia</th>
+            <th>Categoría</th>
             <th>Costo BS</th>
             <th>Stock</th>
             <th>Estado</th>
