--- a/src/app/home/pages/home/my-products/edit-products/edit-products.component.html
+++ b/src/app/home/pages/home/my-products/edit-products/edit-products.component.html
@@ -83,7 +83,7 @@
               <div class="form-group row mb-2">
                 <div class="col-md-4 izq-aling">
                   <div class="row mb-2 label-wrapper">
-                    <div class="col-md-8"><label class="control-label" for="CurrencyCost" title="">Precio Costo</label></div>
+                    <div class="col-md-8"><label class="control-label" for="CurrencyCost" title="">Costo BS</label></div>
                     <div class="col-md-1">
                       <div class="ico-help" title="Precio costo del producto."><i class="fa fa-question-circle"></i></div>
                     </div>
@@ -100,7 +100,7 @@
                 </div>
               </div>
 
-              <div class="form-group row mb-2" style="margin-top: 6%;">
+              <!--<div class="form-group row mb-2" style="margin-top: 6%;">
                 <div class="col-md-4 izq-aling">
                   <div class="row mb-2 label-wrapper">
                     <div class="col-md-8"><label class="control-label" for="Currency" title="">Precio de publicación</label></div>
@@ -118,13 +118,12 @@
                       step="0.01" min="0" max="10000" [(ngModel)]="editableProduct.price">
                   </div>
                 </div>
-              </div>
-
+              </div>-->
+              <div class="form-group row mb-2" style="margin-top: 6%;"></div>
               <div class="form-group row mb-2">
                 <div class="col-md-4 izq-aling">
                   <div class="row mb-2 label-wrapper">
-                    <div class="col-md-8"><label class="control-label" for="Cant" title="">Cantidad de
-                        existencias</label></div>
+                    <div class="col-md-8"><label class="control-label" for="Cant" title="">Stock</label></div>
                     <div class="col-md-1">
                       <div class="ico-help" title="Cantidad actual de productos en existencia."><i
                           class="fa fa-question-circle"></i></div>
@@ -372,6 +371,45 @@
                     </div>
                   </div>
                 </div>
+                <div class="form-group row mb-2">
+                  <div class="col-md-4 izq-aling">
+                    <div class="row mb-2 label-wrapper">
+                      <div class="col-md-8"><label class="control-label" for="CurrencyCost" title="">Costo BS</label></div>
+                      <div class="col-md-1">
+                        <div class="ico-help" title="Precio de costo del producto."><i class="fa fa-question-circle"></i></div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-8">
+                    <div class="input-group">
+                      <div class="input-group-append">
+                        <span class="input-group-text">UYU</span>
+                      </div>
+                      <input class="form-control text-box single-line" id="CurrencyCost" name="CurrencyCost" type="number"
+                        step="0.01" min="0" max="10000" [(ngModel)]="editableProduct.price_costUYU" disabled>
+                    </div>
+                  </div>
+                </div>
+                <!-- TO DO: debe traer la información del precio de publicación (precio costo BS + margen)-->
+                <!--<div class="form-group row mb-2">
+                  <div class="col-md-4 izq-aling">
+                    <div class="row mb-2 label-wrapper">
+                      <div class="col-md-8"><label class="control-label" for="CurrencyCost" title="">Precio publicación</label></div>
+                      <div class="col-md-1">
+                        <div class="ico-help" title="Precio de publicación del producto."><i class="fa fa-question-circle"></i></div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-8">
+                    <div class="input-group">
+                      <div class="input-group-append">
+                        <span class="input-group-text">UYU</span>
+                      </div>
+                      <input class="form-control text-box single-line" id="CurrencyCost" name="CurrencyCost" type="number"
+                        step="0.01" min="0" max="10000" [(ngModel)]="editableProduct.price_costUYU" disabled>
+                    </div>
+                  </div>
+                </div>-->
               </div>
            </div>
          </div>
