modal publicar productos

--- a/src/app/home/pages/home/my-products/publish-myproducts/publish-myproducts.component.html
+++ b/src/app/home/pages/home/my-products/publish-myproducts/publish-myproducts.component.html
@@ -571,7 +571,7 @@
     </div>
   </div>
 </div>
-
+<app-publicar-producto></app-publicar-producto>
 <app-global-loading [globalLoading]="loadingModal"
   [globalLoadingDescription]="'Guardando información...'"></app-global-loading>
 <app-global-loading [globalLoading]="loadingModalDelete"
